# arxiv-to-obsidian-converter

./: .gitignore  Dockerfile  README.md  Visual_Instruction_Tuning.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
env/: pyvenv.cfg
scripts/: arxiv_fetcher.py  note_creator.py  pdf_processor.py
