[tool.poetry]
name = "arxiv-to-obsidian"
version = "0.1.0"
description = "Convert arXiv papers to Obsidian notes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
arxiv = "^1.4.2"
pypdf = "^3.17.0"
requests = "^2.31.0"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arxiv-to-obsidian = "main:main"